# mlops-with-dvc

./: .gitignore  README.md  compose.yml  data.dvc  example.env  main.py  pyproject.toml
.dvc/: config
