[project]
name = "mlops-with-dvc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.61.0",
    "mlflow>=3.2.0",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "s3fs>=2025.7.0",
    "scikit-learn>=1.7.1",
]
